--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@remix-run/react": "^1.0.6",
     "@remix-run/serve": "^1.0.6",
+    "@remix-run/vercel": "^1.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.0.6"
