--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "license": "",
     "scripts": {
         "build": "npm run build:css && remix build",
-        "build:css": "tailwindcss -i ./styles/tailwind.css -o ./app/tailwind.css --minify",
+        "build:css": "tailwindcss -o ./app/tailwind.css",
         "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
         "dev:css": "tailwindcss -i ./app/styles/tailwind.css -o ./app/tailwind.css --watch",
         "postinstall": "remix setup node",
