--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "eslint": "^8.5.0",
         "husky": "^7.0.4",
         "prettier": "^2.5.1",
+        "prettier-plugin-tailwindcss": "^0.1.3",
         "pretty-quick": "^3.1.2",
         "tailwindcss": "^3.0.7",
         "typescript": "^4.5.4"
