--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "build": "npm run build:css && remix build",
         "build:css": "tailwindcss -o ./app/tailwind.css",
         "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
-        "dev:css": "tailwindcss -i ./app/styles/tailwind.css -o ./app/tailwind.css --watch",
+        "dev:css": "tailwindcss -o ./app/tailwind.css --watch",
         "postinstall": "remix setup node",
         "start": "remix-serve build",
         "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
@@ -31,6 +31,7 @@
         "concurrently": "^6.5.1",
         "eslint": "^8.5.0",
         "husky": "^7.0.4",
+        "postcss": "^8.4.6",
         "prettier": "^2.5.1",
         "prettier-plugin-tailwindcss": "^0.1.3",
         "pretty-quick": "^3.1.2",
